--- a/template/addphone.html
+++ b/template/addphone.html
@@ -33,23 +33,12 @@
             <a href="http://127.0.0.1:8000/booking/" class="button">Book a Ride</a>
         </section>
         <div class="book-a-ride" id="book-a-ride">
-            <h2>PROFILE DETAILS</h2>
-            {% if output %}
-            <p><strong>Email: </strong>{{output.email}}</p>
-            <p><strong>Name: </strong>{{output.firstname}} {{output.lastname}}</p>
-            <p><strong>contact: </strong>{{output.phone}}</p>
-            {% else %}
-            <p><strong>Login first</p>
-            {% endif %}
-            <form method="POST" action="">
+            <h1>Add Phone number</h1>
+            <form method="POST">
                 {% csrf_token %}
-                <td>
-                    <button name="add_phone" type="submit" class="add_phone">Add contact number</button>
-                    <br>
-                    <button name="update_user" type="submit" class="update_user">Update Profile</button>
-                    <br>
-                    <button name="delete_user" type="submit" class="delete_user">Delete the Account</button>
-                </td>
+                <label for="add_phone">Contact: </label>
+                <input type="number" name="add_phone"><br><br>
+                <button type="submit">Add</button>
             </form>
         </div>
     </main>
