--- a/template/dtracking.html
+++ b/template/dtracking.html
@@ -23,21 +23,16 @@
     </header>
     <main>
         <section class="hero">
-            <h1>{{output.firstname}}Book a Ride with Lyft</h1>
+            <h1>{{output.firstname}}Track a Ride with Lyft</h1>
             <p>Safe and reliable rides at affordable prices</p>
         </section>
         <section class="book-a-ride" id="book-a-ride">
-            <h2>Book a Ride</h2>
-            <form action="" method="GET">
+            <h2>Track your Ride</h2>
                 <div id='map' style='width: 100%; height: 400px;'></div>
-                <label for="total_distance">Total Distance:</label>
-                <input type="text" id="total_distance" name="total_distance">
-                <br>
-                <label for="price">FARE:</label>
-                <input type="text" id="price" name="price">
-                <br>
-                <label for="distance_left">Distance left:</label>
-                <input type="text" id="distance_left" name="distance_left">
+                <h2>Trip details</h2>
+                <p><strong>Distance Away: </strong>4 km </p>
+                <p><strong>Time Away:</strong>14 min</p>
+                <p><strong>FARE:</strong>100 Rs</p>
                 <br>
                 <script>
                     mapboxgl.accessToken = 'pk.eyJ1IjoidGFuaXNocS0yOCIsImEiOiJjbGY2a245Z2Mxbm52NDBzOTAzd21lOXdoIn0.t54Xj-liRz-dB8fCEoPW5A';
@@ -48,9 +43,7 @@
                         zoom: 13
                     });
                 </script><br>
-                <button type="submit" class="button">BOOK</button>
 
-            </form>
         </section>
     </main>
     <footer>
