--- a/template/passwordchange.html
+++ b/template/passwordchange.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lyft Cab Services</title>
-    
+
     <link rel="stylesheet" href="../static/home.css">
     <link rel="stylesheet" href="../static/booking.css">
     <link rel="stylesheet" href="../static/messages.CSS">
@@ -36,28 +36,28 @@
             <h1>Login on Lyft Cab Services</h1>
             <p>Safe and reliable rides at affordable prices</p>
         </section>
-        
+
         <section class="book-a-ride" id="book-a-ride">
             <form method="POST">
                 {% csrf_token %}
-                <label for="ride-type">Login to continue enjoying the rides:</label>
+                <label for="ride-type">Create a strong Password:</label>
                 <br>
                 <label for="email">email:</label>
                 <input type="email" id="email" name="email">
                 <br>
-                <label for="password">password:</label>
+                <label for="password">New password:</label>
                 <input type="password" id="password" name="password">
+                <br>
+                <label for="cpassword">Confirm password:</label>
+                <input type="password" id="cpassword" name="cpassword">
                 <br>
                 <!-- <label for="finalans">output:</label>
                             <input type="number" name="finalans"> -->
-                <button type="submit" class="button">Login</button>
+                <button type="submit" class="button">Change</button>
                 <br>
-                <a href="http://127.0.0.1:8000/passwordchange/" class="button">Forgot Password??</a>
-                <br>
-                <a href="http://127.0.0.1:8000/signup/" class="button">Don't have an account</a>
             </form>
         </section>
-        
+
     </main>
     <footer>
         <p>&copy; 2023 Cab Services. All rights reserved.</p>
