--- a/template/tracking.html
+++ b/template/tracking.html
@@ -23,22 +23,14 @@
     </header>
     <main>
         <section class="hero">
-            <h1>{{output.firstname}}Book a Ride with Lyft</h1>
+            <h1>{{output.firstname}} Track ypur Ride with Lyft</h1>
             <p>Safe and reliable rides at affordable prices</p>
         </section>
         <section class="book-a-ride" id="book-a-ride">
-            <h2>Book a Ride</h2>
-            <form action="" method="GET">
-                <div id='map' style='width: 100%; height: 400px;'></div>
-                <label for="total_distance">Total Distance:</label>
-                <input type="text" id="total_distance" name="total_distance">
-                <br>
-                <label for="price">FARE:</label>
-                <input type="text" id="price" name="price">
-                <br>
-                <label for="distance_left">Distance left:</label>
-                <input type="text" id="distance_left" name="distance_left">
-                <br>
+            <h2>Trip details</h2>
+                <p><strong>Distance Away: </strong>4 km </p>
+                <p><strong>Time Away:</strong>14 min</p>
+                <p><strong>FARE:</strong>100 Rs</p>
                 <script>
                     mapboxgl.accessToken = 'pk.eyJ1IjoidGFuaXNocS0yOCIsImEiOiJjbGY2a245Z2Mxbm52NDBzOTAzd21lOXdoIn0.t54Xj-liRz-dB8fCEoPW5A';
                     var map = new mapboxgl.Map({
@@ -49,8 +41,6 @@
                     });
                 </script><br>
                 <button type="submit" class="button">BOOK</button>
-
-            </form>
         </section>
     </main>
     <footer>
