--- a/template/home.html
+++ b/template/home.html
@@ -16,22 +16,22 @@
                 <script>console.log(output)</script>
                 {% if output %}
                     {% if output.type == 'Customer' %}
-                        <li><a href="about-us/">About Us</a></li>
+                        <li><a href="/about-us/">About Us</a></li>
                         <li><a href="/contact-us/">Contact Us</a></li>
-                        <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
-                        <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                        <li><a href="/profile/">Profile</a></li>
+                        <li><a href="/logout/">Logout</a></li>
                     {% else %}
-                    <li><a href="about-us/">About Us</a></li>
+                    <li><a href="/about-us/">About Us</a></li>
                     <li><a href="/contact-us/">Contact Us</a></li>
-                    <li><a href="http://127.0.0.1:8000/profile/">Profile</a></li>
-                    <li><a href="http://127.0.0.1:8000/drequests/">Pending requests</a></li>
-                    <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                    <li><a href="/profile/">Profile</a></li>
+                    <li><a href="/drequests/">Pending requests</a></li>
+                    <li><a href="/logout/">Logout</a></li>
                     {% endif %}
                 {% else %}
-                <li><a href="about-us/">About Us</a></li>
+                <li><a href="/about-us/">About Us</a></li>
                 <li><a href="/contact-us/">Contact Us</a></li>
-                <li><a href="login/">Login</a></li>
-                <li><a href="signup/">Sign Up</a></li>
+                <li><a href="/login/">Login</a></li>
+                <li><a href="/signup/">Sign Up</a></li>
                 {% endif %}
                 
             </ul>
@@ -50,7 +50,7 @@
             {% endif%}
             <p>Safe and reliable rides at affordable prices</p>
             {%if output.type == 'Customer'%}
-                <a href="http://127.0.0.1:8000/booking/" class="button">Book a Ride</a>
+                <a href="/booking/" class="button">Book a Ride</a>
             {% endif %}
         </section>
         <section class="services">
