--- a/template/loginpage.html
+++ b/template/loginpage.html
@@ -26,8 +26,8 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href='http://127.0.0.1:8000/about-us/'>About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
+                <li><a href='/about-us/'>About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -52,9 +52,9 @@
                             <input type="number" name="finalans"> -->
                 <button type="submit" class="button">Login</button>
                 <br>
-                <a href="http://127.0.0.1:8000/passwordchange/" class="button">Forgot Password??</a>
+                <a href="/passwordchange/" class="button">Forgot Password??</a>
                 <br>
-                <a href="http://127.0.0.1:8000/signup/" class="button">Don't have an account</a>
+                <a href="/signup/" class="button">Don't have an account</a>
             </form>
         </section>
         
