--- a/template/tracking.html
+++ b/template/tracking.html
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-                <li><a href="logout/">Logout</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/logout/">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -28,9 +28,9 @@
         </section>
         <section class="book-a-ride" id="book-a-ride">
             <h2>Trip details</h2>
-                <p><strong>Distance Away: </strong>4 km </p>
-                <p><strong>Time Away:</strong>14 min</p>
-                <p><strong>FARE:</strong>100 Rs</p>
+                <p><strong>Distance Away: </strong>{{result.dist}} meter</p>
+                <p><strong>Time Away:</strong>{{result.time}} mins</p>
+                <p><strong>FARE:</strong>{{result.fare}} Rs</p>
                 <script>
                     mapboxgl.accessToken = 'pk.eyJ1IjoidGFuaXNocS0yOCIsImEiOiJjbGY2a245Z2Mxbm52NDBzOTAzd21lOXdoIn0.t54Xj-liRz-dB8fCEoPW5A';
                     var map = new mapboxgl.Map({
@@ -40,7 +40,6 @@
                         zoom: 13
                     });
                 </script><br>
-                <button type="submit" class="button">BOOK</button>
         </section>
     </main>
     <footer>
