--- a/template/updateprofile.html
+++ b/template/updateprofile.html
@@ -15,10 +15,10 @@
         <nav>
             <ul>
                 <script>console.log(output)</script>
-                <li><a href="http://127.0.0.1:8000/logout/">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/contact-us/">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/logout/">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
             <h1>Book a Ride with Lyft</h1>
             {% endif %}
             <p>Safe and reliable rides at affordable prices</p>
-            <a href="http://127.0.0.1:8000/booking/" class="button">Book a Ride</a>
+            <a href="/booking/" class="button">Book a Ride</a>
         </section>
         <div class="book-a-ride" id="book-a-ride">
             <h1>Update Profile</h1>
