--- a/template/about-us.html
+++ b/template/about-us.html
@@ -14,15 +14,13 @@
         <nav>
             <ul>
                 {% if output %}
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout">Logout</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/logout">Logout</a></li>
                 {% else %}
-                <li><a href="http://127.0.0.1:8000">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
                 {% endif %}
-                
-
             </ul>
         </nav>
     </header>
