--- a/template/booking_.html
+++ b/template/booking_.html
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-                <li><a href="logout/">Logout</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/logout/">Logout</a></li>
             </ul>
         </nav>
     </header>
