--- a/template/contact-us.html
+++ b/template/contact-us.html
@@ -14,12 +14,12 @@
         <nav>
             <ul>
                 {% if output %}
-                <li><a href="http://127.0.0.1:8000/">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/about-us/">about Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about-us/">about Us</a></li>
+                <li><a href="/logout/">Logout</a></li>
                 {% else %}
                 <li><a href="/">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/about-us.html">about-us</a></li>
+                <li><a href="/about-us.html">about-us</a></li>
                 {% endif %}
 
             </ul>
