--- a/template/goodbye.html
+++ b/template/goodbye.html
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
                 <li><a href="/">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/login/">Login</a></li>
-                <li><a href="http://127.0.0.1:8000/signup/">Sign Up</a></li>
+                <li><a href="/login/">Login</a></li>
+                <li><a href="/signup/">Sign Up</a></li>
 
             </ul>
         </nav>
