--- a/template/passwordchange.html
+++ b/template/passwordchange.html
@@ -26,8 +26,8 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href='http://127.0.0.1:8000/about-us/'>About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
+                <li><a href='/about-us/'>About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
             </ul>
         </nav>
     </header>
