--- a/template/payment.html
+++ b/template/payment.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="about-us/">About Us</a></li>
                 <li><a href="/contact-us/">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                <li><a href="/logout/">Logout</a></li>
             </ul>
         </nav>
     </header>
