--- a/template/regvehicle.html
+++ b/template/regvehicle.html
@@ -21,10 +21,10 @@
     <header>
       <nav>
         <ul>
-          <li><a href="http://127.0.0.1:8000">Home</a></li>
-          <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-          <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-          <li><a href="http://127.0.0.1:8000/login/">Login</a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="/about-us/">About Us</a></li>
+          <li><a href="/contact-us/">Contact Us</a></li>
+          <li><a href="/login/">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -75,7 +75,7 @@
             <br />
             <button type="submit" class="button">Signup</button>
 
-          <!-- <a href="http://127.0.0.1:8000" class="button">Signup</a> -->
+          <!-- <a href="" class="button">Signup</a> -->
             <script>
                 document.addEventListener('DOMContentLoaded', function () {
                     // Get a reference to the button element
