--- a/template/request.html
+++ b/template/request.html
@@ -15,9 +15,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:8000/logout/">Logout</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/logout/">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -30,21 +30,10 @@
             <h2>Book a Ride</h2>
             <form action="" method="POST">
                 {% csrf_token%}
-                <div id='map' style='width: 100%; height: 400px;'></div>
-                <script>
-                    mapboxgl.accessToken = 'pk.eyJ1IjoidGFuaXNocS0yOCIsImEiOiJjbGY2a245Z2Mxbm52NDBzOTAzd21lOXdoIn0.t54Xj-liRz-dB8fCEoPW5A';
-                    var map = new mapboxgl.Map({
-                        container: 'map',
-                        style: 'mapbox://styles/mapbox/streets-v11',
-                        center: [77.2732, 28.5459],
-                        zoom: 13
-                    });
-                    
-                </script>
+                <button name="refresh_trip" id="refresh_trip" type="submit" class="refresh_trip">Refresh</button>
                 <br>
                 <button name="cancel_request" id="cancel_request" type="submit" class="cancel_request">Cancel Ride</button>
                 <br>
-
             </form>
         </section>
     </main>
