--- a/template/usertype.html
+++ b/template/usertype.html
@@ -22,10 +22,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="http://127.0.0.1:8000">Home</a></li>
-                <li><a href="http://127.0.0.1:8000/about-us/">About Us</a></li>
-                <li><a href="http://127.0.0.1:8000/contact-us/">Contact Us</a></li>
-                <li><a href="http://127.0.0.1:8000/login/">Login</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="/about-us/">About Us</a></li>
+                <li><a href="/contact-us/">Contact Us</a></li>
+                <li><a href="/login/">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -43,8 +43,8 @@
                 <select name="ride-type" id="ride-type">
                     <option value="Customer">Customer</option>
                     <option value="Driver">Driver</option>
-                <a href="http://127.0.0.1:8000/signup" class="button">NEXT</a>
-                <a href="http://127.0.0.1:8000/login" class="button">SIGNUP</a>
+                <a href="/signup" class="button">NEXT</a>
+                <a href="/login" class="button">SIGNUP</a>
 
             </form>
         </section>
