--- a/template/profile.html
+++ b/template/profile.html
@@ -59,6 +59,8 @@
                     <br>
                     <button name="update_user" type="submit" class="update_user">Update Profile</button>
                     <br>
+                    <button name="trip_history" type="submit" class="trip_history">Trip history</button>
+                    <br>
                     <button name="delete_user" type="submit" class="delete_user">Delete the Account</button>
                     <br>
 
