--- a/template/regvehicle.html
+++ b/template/regvehicle.html
@@ -6,7 +6,7 @@
     <title>Lyft Cab Services</title>
     <link rel="stylesheet" href="../static/home.css" />
     <link rel="stylesheet" href="../static/booking.css" />
-    <link rel="stylesheet" href="../static/messages.CSS" />
+    <link rel="stylesheet" href="../static/messages.css" />
     <script src="../static/messages.js"></script>
   </head>
 
