--- a/template/dtracking.html
+++ b/template/dtracking.html
@@ -42,8 +42,12 @@
                         center: [77.2732, 28.5459],
                         zoom: 13
                     });
+                
                 </script><br>
-
+                <form method="POST">
+                    {% csrf_token %}
+                    <button name="drefresh" type="submit" class="drefresh"> Refresh </button>
+                </form>
         </section>
     </main>
     <footer>
