--- a/template/loginpage.html
+++ b/template/loginpage.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="../static/home.css">
     <link rel="stylesheet" href="../static/booking.css">
-    <link rel="stylesheet" href="../static/messages.CSS">
+    <link rel="stylesheet" href="../static/messages.css">
     <script src="../static/messages.js"></script>
 </head>
 
