--- a/template/vehicle.html
+++ b/template/vehicle.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <script>console.log(output)</script>
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/about-us/">About Us</a></li>
                 <li><a href="/contact-us/">Contact Us</a></li>
                 <li><a href="/logout/">Logout</a></li>
