--- a/template/dtracking.html
+++ b/template/dtracking.html
@@ -46,7 +46,7 @@
                 </script><br>
                 <form method="POST">
                     {% csrf_token %}
-                    <button name="drefresh" type="submit" class="drefresh"> Refresh </button>
+                    <button name="drefresh" id="drefresh" type="submit" class="drefresh"> Refresh </button>
                 </form>
         </section>
     </main>
